--- a/CONF/config.yml
+++ b/CONF/config.yml
@@ -1,3 +1,6 @@
+#user ansible is using for deployment
+user_admin: "admin"
+
 # repo
 repo: "/opt/application/admin/nifiAnsible/artifacts"
 
@@ -25,19 +28,27 @@ soft_nofile: 900000
 # nifi
 nifi_version: 1.15.3
 nifi_major_version: "{{ nifi_version | splitext | first }}"
-
+nifi_flow_archive: "flow.xml.gz"
+nifi_python_archive_name: "scripts.tar"
 # nifi installation
-nifi_base_dir: "/u/opt/nifi"
+nifi_base_dir: "/opt/application/nifi"
 nifi_archive_name: "nifi-{{ nifi_version }}-bin.tar.gz"
 nifi_user: "nifi"
 nifi_group: "{{ nifi_user }}"
 nifi_service: "/etc/systemd/system/nifi.service"
 
 nifi_home: "{{ nifi_base_dir }}/nifi-current"
+nifi_tmp: "{{ nifi_home }}/tmp"
 nifi_conf_dir: "{{ nifi_home }}/conf"
+nifi_python_scripts_dir: "{{ nifi_home }}/python_scripts"
+nifi_log_dir: "{{ nifi_home }}/logs"
 nifi_nar_dir: "{{ nifi_home }}/lib"
 nifi_work_dir: "{{ nifi_home }}/work"
-
+nifi_database_repository: "{{ nifi_home }}/database_repository"
+nifi_flowfile_repository: "{{ nifi_home }}/flowfile_repository"
+nifi_run_dir: "{{ nifi_home }}/run"
+nifi_content_repositories: "{{ nifi_home }}/content_repository"
+nifi_provenance_repositories: "{{ nifi_home }}/provenance_repository"
 
 # whether to restart nifi after making changes
 nifi_perform_restart: true
@@ -65,7 +76,7 @@ nifi_force_restart: false
 nifi_single_node: true
 nifi_web_http_host: 0.0.0.0
 nifi_web_http_port: 8090
-
+nifi_is_secure: False
 # NiFi java configuration bootstrap
 java_arg_3: "Xmx7g"
 java_arg_13: "XX:+UseG1GC"
@@ -146,4 +157,8 @@ nifi_custom_log_levels: []
 #nifi_volume_fs_type: ext4
 #nifi_volume_mount_opts: defaults,discard
 
+#Nifi templates list
 
+upload_templates:
+  - RiGHTvSyncInventoryManagerWithScheduler.xml
+  - SyncProfilesFromRiGHTvInSegmentEngine.xml
